# codexpet-nest

./: .gitignore  .prettierignore  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
Resources/: Info.plist
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.shen-xinghui.conf.json  tauri.xia-yizhou.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/icons/shen-xinghui/: icon.icns
apps/desktop-tauri/src-tauri/icons/xia-yizhou/: icon.icns
apps/desktop-tauri/src-tauri/src/: app_config.rs  codex_state.rs  coords.rs  lib.rs  main.rs
apps/desktop-tauri/src-tauri/src/commands/: actions.rs  config.rs  debug.rs  mod.rs
apps/desktop-tauri/src-tauri/src/platform/: macos.rs  windows.rs
apps/desktop-tauri/src-tauri/src/tray/: builder.rs  mod.rs
apps/desktop-tauri/src-tauri/src/windows/: mod.rs  setup.rs
apps/desktop-tauri/src-tauri/tests/: config_tests.rs
docs/: RELEASE_GUIDE.md  codex-pet-switching-research.md  codex-usage-indicators.md  permissions.md  phase1-risk-spike-report.md  phase10-macos-qa-bug-bash-report.md  phase11-windows-risk-closure-report.md  phase12-windows-parity-implementation-spike-report.md  phase12a-windows-ci-build-spike-report.md  phase13-local-first-snapshot-import-export-report.md  phase2-core-domain-port-report.md  phase3-overlay-rendering-mvp-report.md  phase4-settings-local-management-report.md  phase5-package-registry-local-assets-report.md  product-roadmap.md  (+10 more)
(+113 files in other folders)
