[package]
name = "codexpet-nest"
version = "0.1.12"
description = "CodexPet Nest Desktop Application"
authors = ["Ryan Niu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codexpet_nest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
dirs = "5"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
